# SwiftBots

./: .gitignore  CMakeLists.txt  Makefile  mypy.ini  pylock.toml  pyproject.toml  ruff.toml
docs/: todos.txt
examples/admin/: README.md  admin_bot.py  main.py
examples/console_chat/: README.md  main.py
examples/databases/: README.md  alembic.ini  main.py  notes_bot.py
examples/databases/alembic/: env.py
examples/databases/alembic/versions/: d9ce75cb3c8c_create_table_note.py
examples/databases/database/: database.py  notes.sqlite3
examples/databases/models/: notes.py
examples/grpc_communication/: README.md  admin_bot.py  admin_service.py  bots_admin.proto  bots_admin_pb2.py  bots_admin_pb2.pyi  bots_admin_pb2_grpc.py  script.txt  weather_bot.py
examples/hello_world/: README.md  main.py
examples/serverless/: README.md  main.py
examples/tasks/: main.py
examples/telegram/: README.md  main.py
swiftbots/: __init__.py  admin_utils.py  bots.py  chats.py  functions.py  loggers.py  message_handlers.py  middlewares.py  runners.py  types.py  user_utils.py.obsolete  utils.py
swiftbots/all_types/: __init__.py  _exceptions.py  _loggers.py  _schedulers.py  _triggers.py
swiftbots/app/: application.py  container.py
swiftbots/c_ext/: search_ext.c  search_ext.pyi
swiftbots/tasks/: __init__.py  schedulers.py  tasks.py  triggers.py
tests/: common.py  test_admin_utils.py  test_basic_bot.py  test_chat_bot.py  test_chat_handlers.py  test_components.py  test_tasks.py
