[project]
name = "swiftbots"
version = "0.2.2"
description = "Python asynchronous framework for rapid any-level bots development"
readme = "docs/README.md"
requires-python = ">=3.10.0"
dependencies = [
    "httpx>=0.0.0",
]

[project.optional-dependencies]
standard = []

examples = [
    "grpcio>=0.0.0",
    "sqlalchemy>=0.0.0",
    "alembic>=0.0.0",
    "grpcio-tools>=1.71.0",
    "azure-functions>=0.0.0"
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "artifacts-keyring>=0.4.0",
    "black>=25.1.0",
    "keyring>=25.6.0",
    "mypy>=1.15.0",
    "pytest>=8.2.2",
    "pytest-timeout>=2.3.1",
    "ruff>=0.11.2",
    "twine>=6.1.0",
]

[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "swiftbots/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]
